--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     <h4>Fall 2018</h4>
                 </div>
                 <div class="slide">
-                    <h3>By Ping Cheng</h3>
-                    <h3>21701816</h3>
+                    <h3>By Ping Cheng and Mian Muhammad Umair Amer</h3>
+                    <h3>21701816 & 21701815</h3>
                 </div>
                 <div class="slide">
                     <h3>Have Fun :)</h3>
